# FemasTrader

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Doc/: FemasAPI_V1.01.rar  Howto.txt  app.md  fmhelper.py  log_0802_2016.doc  perf.md
Doc/FemasAPI_V1.01/include/: USTPFtdcMduserApi.h  USTPFtdcTraderApi.h  USTPFtdcUserApiDataType.h  USTPFtdcUserApiStruct.h
Doc/FemasAPI_V1.01/win32/: USTPmduserapi.lib  USTPtraderapi.lib
app/: encode.sh
app/femasmd/: MsClient.cpp  USTPMDClient.h  USTPMDHandler.cpp  USTPMDHandler.h
app/fm2trader/: fm2spi.cpp  fm2spi.h  fm2trader.cpp
app/fm3in1/: fm2spi.cpp  fm2spi.h  fm3in1.h  guavaproto.h  netmd.cpp  strategy_ins.cpp  strategy_ins.h  strategy_status.h
app/fm3in1_ht/: fm2spi.cpp  fm2spi.h  fm2spi_ht.cpp  fm2spi_ht.h  fm3in1.h  fm3in1_ht.cpp  fm3in1_ht.h  guavaproto.h  netmd.cpp  strategy_ins.cpp  strategy_ins.h  strategy_status.h
app/guavamd/: guava_demo.cpp  guava_demo.h  guava_quote.cpp  guava_quote.h  guavamd.cpp  socket_multicast.cpp
app/guavasw/: Makefile  fieldhelper.h  guava_demo.cpp  guava_demo.h  guava_quote.cpp  guava_quote.h  guavasw.cpp  profile.cpp  profile.h  socket_multicast.cpp  socket_multicast.h
app/his_sim/: fm2spi.cpp  fm2spi.h  fm3in1.h  guavaproto.h  netmd.cpp  strategy_ins.cpp  strategy_ins.h  strategy_status.h
app/lmiced/: demo.cpp  fmspi.cpp  fmspi.h  fmtrader.cpp  genid.c  lmclient.c  lmclient.h  lmiced.c  lmicedtrader.cpp  lmicedtrader.h  lmshm.c  lmshm.h  lmspi.cpp  lmspi.h  lmtspi.h  publicfuncs.cpp  publicfuncs.h  rb1610.cpp  udsc.c  udss.c  udss.h  zstrader.cpp
app/logger/: logger.c
app/mdht/: Makefile  fieldhelper.h  guava_demo.cpp  guava_demo.h  guava_quote.cpp  guava_quote.h  guavaht.cpp  profile.cpp  profile.h  socket_multicast.cpp  socket_multicast.h  struct_ht.h
app/netmd/: guavaproto.h  netmd.c
app/strategyht/: strategy_ins.cpp  strategy_ins.h  strategy_status.cpp  strategy_status.h  strategyht.cpp  struct_ht.h
eal/: lmice_bloomfilter.c  lmice_bloomfilter.h  lmice_core.c  lmice_core.h  lmice_eal_aio.c  lmice_eal_aio.h  lmice_eal_align.h  lmice_eal_atomic.h  lmice_eal_bson.cpp  lmice_eal_bson.h  lmice_eal_common.h  lmice_eal_daemon.h  lmice_eal_endian.c  lmice_eal_endian.h  lmice_eal_event.c  lmice_eal_event.h  lmice_eal_hash.c  lmice_eal_hash.h  lmice_eal_inc.c  lmice_eal_inc.h  lmice_eal_iocp.h  lmice_eal_kqueue.h  lmice_eal_log.cpp  lmice_eal_log.h  lmice_eal_malloc.c  lmice_eal_malloc.h  lmice_eal_rwlock.h  lmice_eal_shm.c  lmice_eal_shm.h  lmice_eal_shm_win.h  lmice_eal_socket.h  lmice_eal_spinlock.c  lmice_eal_spinlock.h  lmice_eal_thread.c  lmice_eal_thread.h  lmice_eal_thread_pthread.h  lmice_eal_thread_win.h  lmice_eal_time.c  lmice_eal_time.h  lmice_eal_time_win.h  (+9 more)
lib/FemasAPIv2/linux64/include/: USTPFtdcMduserApi.h  USTPFtdcTraderApi.h  USTPFtdcUserApiDataType.h  USTPFtdcUserApiStruct.h
lib/FemasAPIv2/win32/include/: USTPFtdcMduserApi.h  USTPFtdcTraderApi.h  USTPFtdcUserApiDataType.h  USTPFtdcUserApiStruct.h
lib/FemasAPIv2/win32/lib/: USTPmduserapi.lib  USTPtraderapi.lib
lib/libbson/include/: bson-config.h
lib/libbson/lib/: libbson-1.0.so.1
lib/libbson/tools/: bson-to-json
lib/libforecaster/: ChinaL1DiscreteFeature.h  Feature.h  RollScheme.h  forecaster.h
mduserdemo/source/mduserdemo/: CMakeLists.txt  Makefile  MsClient.cpp  USTPMDClient.cpp  USTPMDClient.h  USTPMDHandler.cpp  USTPMDHandler.h  mduserdemo.ini  profile.cpp  profile.h
traderapidemo/TraderApi4LNX64/: Makefile  PublicFuncs.cpp  PublicFuncs.h  TraderSpi.cpp  TraderSpi.h  USTPFtdcUserApiDataType.h  testapi.cpp
